fix(docs): fixed content and ToC's gap being inconsistent between /docs and /blog

--- a/docs/src/app.css
+++ b/docs/src/app.css
@@ -6,7 +6,7 @@
 
 @layer base {
   * {
-    @apply min-w-0;
+    @apply relative box-border min-w-0;
   }
   html,
   body {
